--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ export(summary_formula)
 export(to.lasttoggle.matrix)
 export(to.matrix.lasttoggle)
 export(to_ergm_Cdouble)
+export(vif_ergm)
 export(wtd.median)
 import(coda)
 import(network)
