Add sources argument and roxygenize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,8 @@ S3method(to_ergm_Cdouble,matrix)
 S3method(to_ergm_Cdouble,network)
 S3method(update,network)
 S3method(vcov,ergm)
+S3method(vif_ergm,ergm)
+S3method(vif_ergm,ergm_model)
 export(COLLAPSE_SMALLEST)
 export(ERGM_GET_VATTR_MULTIPLE_TYPES)
 export(ERGM_LEVELS_SPEC)
