--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ S3method(print,gof)
 S3method(print,network.list)
 S3method(print,rlebdm)
 S3method(print,summary.ergm)
+S3method(print,vif_ergm)
 S3method(san,default)
 S3method(san,ergm)
 S3method(san,ergm_model)
